안드로이드 메모

--- a/_posts/android/2019-06-14-android메모.md
+++ b/_posts/android/2019-06-14-android메모.md
@@ -27,7 +27,7 @@ ContextCompat.getColor(context, R.color.colorBlabla)
 - [[Android] 글자에 옷을 입혀보자 (Spannable 사용하기) - 여름숲](https://re-build.tistory.com/13)
 - [Android spannable (textview) - 김형섭의 개발공간](https://sub-dev.tistory.com/10)
 
-## recycler view
+# recycler view
 
 ##### 패딩값 설정
 
@@ -50,7 +50,7 @@ tools:listitem="@layout/list_item_garden_planting"
 
 `listview`나 `recycler`뷰에서 `tools:listitem` 속성이 실제 프로덕션에서 영향을 미치진 않는다. 다만 해당 리사이클러뷰의 각 item list의 뷰(레이아웃)을 바로 찾아갈 수 있고, 개발도중 일종의 미리보기처럼 볼 수 있다.
 
-## Drwable Layout
+# Drwable Layout
 
 `android:fitsSystemWindows = true`
 옆에서 슬며시 나오는 뷰가 status bar와 키보드 영역을 덮지 않음을 설정하는 부분. true라면 status바를 덮지 않는다.
@@ -68,7 +68,7 @@ tools:listitem="@layout/list_item_garden_planting"
 ...
 ```
 
-## tools
+# Tools
 
 ##### tools:layout
 
@@ -81,3 +81,16 @@ tools:listitem="@layout/list_item_garden_planting"
 ```
 
 디자인 탭에서 액티비티 xml 내에 fragment는 보통 회색으로 보여진다. 그러나 `tools:layout`을 사용하면 Fragment의 내용도 함께 보여진다.
+
+# Material
+
+##### 툴바 좌측에 홈 or 상위 화면으로 이동하는 버튼 노출시키기
+
+```kotlin
+override fun onCreate(savedInstanceState: Bundle?) {
+        super.onCreate(savedInstanceState)
+        ...
+        supportActionBar?.setDisplayHomeAsUpEnabled(true) // <- 이 부분
+        ...
+}
+```
