--- a/_posts/android/2019-06-14-android메모.md
+++ b/_posts/android/2019-06-14-android메모.md
@@ -55,7 +55,7 @@ tools:listitem="@layout/list_item_garden_planting"
 `android:fitsSystemWindows = true`
 옆에서 슬며시 나오는 뷰가 status bar와 키보드 영역을 덮지 않음을 설정하는 부분. true라면 status바를 덮지 않는다.
 
-## Databinding
+# Databinding
 
 ##### finish Activity
 
