@string databinding 추가

--- a/_posts/android/2019-06-14-android메모.md
+++ b/_posts/android/2019-06-14-android메모.md
@@ -48,7 +48,7 @@ app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
 tools:listitem="@layout/list_item_garden_planting"
 ```
 
-`listview`나 `recycler`뷰에서 `tools:listitem` 속성이 실제 프로덕션에서 영향을 미치진 않는다. 다만 해당 리사이클러뷰의 각 item list의 뷰(레이아웃)을 바로 찾아갈 수 있고, 개발도중 일종의 미리보기처럼 볼 수 있다.
+`listview`나 `recycler`뷰에서 `tools:listitem` 속성이 실제 프로덕션에서 영향을 미치진 않는다. 다만 해당 리사이클러뷰의 각 item list의 뷰(레이아웃)을 바로 찾아갈 수 있고, 개발 도중 일종의 미리보기처럼 볼 수 있다.
 
 # Drwable Layout
 
@@ -66,6 +66,24 @@ tools:listitem="@layout/list_item_garden_planting"
 <ImagaeView
     android:onClick="@{(view) -> ((Activity)(view.getContext())).finish()}" />
 ...
+```
+
+##### @string databinding
+
+@string 파일에 아래와 같이 작성
+
+```
+<string name="planted_date" translation_description="식물 심은 날짜 표기">%1$s planted on %2$s</string>
+```
+
+`%1$s`와 `%2$s`는 각각 첫 번째 스트링으로 대체될 부분, 두 번째 스트링으로 대체될 부분을 뜻한다. 이들을 xml에서 databinding으로 적용하는 코드는 아래와 같다.
+
+```xmlan
+<TextView
+    android:id="@+id/plant_date"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:text="@{@string/planted_date(viewModel.plantName, viewModel.plantDateString)}" />
 ```
 
 # Tools
