오탈자 수정

--- a/_posts/android/2019-06-14-android메모.md
+++ b/_posts/android/2019-06-14-android메모.md
@@ -27,7 +27,7 @@ ContextCompat.getColor(context, R.color.colorBlabla)
 - [[Android] 글자에 옷을 입혀보자 (Spannable 사용하기) - 여름숲](https://re-build.tistory.com/13)
 - [Android spannable (textview) - 김형섭의 개발공간](https://sub-dev.tistory.com/10)
 
-# recycler view
+# Recycler view
 
 ##### 패딩값 설정
 
