--- a/_posts/android/2019-07-13-liveData변형하기.md
+++ b/_posts/android/2019-07-13-liveData변형하기.md
@@ -55,7 +55,7 @@ val userNameLiveData: LiveData<String> = Transformations.map(userLiveData) { use
 
 참고로 `Transformations.map`의 내부 구현은 아래와 같다.
 
-```kotlin
+```java
 @MainThread
 @NonNull
 public static <X, Y> LiveData<Y> map(
@@ -99,7 +99,7 @@ public static <X, Y> LiveData<Y> map(
 
 내부 구현은 아래와 같다.
 
-```kotlin
+```java
 @MainThread
 @NonNull
 public static <X, Y> LiveData<Y> switchMap(
