--- a/_posts/javascript/2019-04-22-자바스크립트의치명적인단점.md
+++ b/_posts/javascript/2019-04-22-자바스크립트의치명적인단점.md
@@ -19,15 +19,15 @@ comments: true
 
 면접을 본지 꽤 오래 되었지만, 아직도 가끔 면접관이 원했던 답이 무엇이었을까 생각해보곤 한다. 자바스크립트의 단점이 얼마나 많은데 어떻게 당신의 생각과 취향에 맞는 단점을 골라 말하리. 게다가 어떤 힌트도없는 단 한 문장의 질문만으로..
 
-웹 프론트엔드 개발자로서 자질을 물어보기 위해 했던 질문이라면, 아마 **"브라우저에 종속적입니다"라는 대답이 적절했을까?** 분명 브라우저에서 돌아가는 자바스크립트는 브라우저에 종속적일 수 밖에 없다. 내 블로그의 ["크로스브라우징이란?"](https://wooooooak.github.io/frontend/2018/08/17/%ED%81%AC%EB%A1%9C%EC%8A%A4%EB%B8%8C%EB%9D%BC%EC%9A%B0%EC%A7%95/) 포스팅의 인기가 많은 이유도 자바스크립트가 브라우저에 종속적이기 때문에 생기는 문제가 많기 때문이다. 쉽게 말해 내가 작성한 자바스크립트의 코드가 어떤 브라우저에서 돌아가느냐에 따라 개별적으로 신경써줘야 할 부분이 많다는 것이고, 한참 잘 돌아가는 코드가 어느날 갑자기 브라우저의 정책이나 지원에 따라 이상하게 작동할 수도 있다는 것이다. 분명 단점이다.
+프론트엔드 개발자로서 자질을 물어보기 위해 했던 질문이라면, 아마 **"브라우저에 종속적입니다"라는 대답이 적절했을까?** 분명 브라우저에서 돌아가는 자바스크립트는 브라우저에 종속적일 수 밖에 없다. 내 블로그의 ["크로스브라우징이란?"](https://wooooooak.github.io/frontend/2018/08/17/%ED%81%AC%EB%A1%9C%EC%8A%A4%EB%B8%8C%EB%9D%BC%EC%9A%B0%EC%A7%95/) 포스팅의 인기가 많은 이유도 자바스크립트가 브라우저에 종속적이기 때문에 생기는 문제가 많기 때문이다. 쉽게 말해 내가 작성한 자바스크립트의 코드가 어떤 브라우저에서 돌아가느냐에 따라 개별적으로 신경써줘야 할 부분이 많다는 것이고, 한참 잘 돌아가는 코드가 어느날 갑자기 브라우저의 정책이나 지원에 따라 이상하게 작동할 수도 있다는 것이다. 분명 단점이다.
 
-혹은, 아주 일반적인 자바스크립트의 단점을 듣고 싶었던 것이라면 어떤 답이 적절했을까? 블록 수준의 스코프를 지원하지 않는 점? 호이스팅? 언제 어떻게 변할지 예측하기 귀찮은 this바인딩? **this의 경우는 정말 이해하기 어려운 코드를 만들 수도 있으므로 정말 잘 살펴 사용해야한다.** 잘만 사용한다면 좋겟지만, 대부분의 경우 라이브러리나 도구를 개발하는 사람들이 언어의 맥락을 교모히 왜곡시켜 특정한 요건을 구현하는데 사용해오는 정도인 것 같다. 아마 this의 바인딩 문제를 대답했다면 글쎄, 원하는 답은 아니었을 것 같다.
+혹은, 아주 일반적인 자바스크립트의 단점을 듣고 싶었던 것이라면 어떤 답이 적절했을까? 블록 수준의 스코프를 지원하지 않는 점? 호이스팅? 언제 어떻게 변할지 예측하기 귀찮은 this바인딩? **this의 경우는 정말 이해하기 어려운 코드를 만들 수도 있으므로 정말 잘 살펴 사용해야한다.** 잘만 사용한다면 좋겟지만, 대부분의 경우 라이브러리나 도구를 개발하는 사람들이 언어의 맥락을 교모히 왜곡시켜 특정한 요건을 구현하는데 사용해오는 정도인 것 같다. 면접관에게 this의 바인딩 문제를 대답했다면 글쎄, 왠지 원하는 답은 아니었을 것 같다.
 
-최근에 떠오르는 대답은 **자바스크립트가 언어 차원에서 immutable함을 제공해주지 않는 다는 것**이다. 함수형 프로그래밍을 지원하는 것이 장점인 자바스크립트인데, 함수형과 땔래야 땔 수 없는 관계인 불변성을 지원하지 않는다니 꽤나 모순적이다. 아니 모순을 넘어서, 함수형이 대세로 떠어로는 요즘같은 때에는 치명적이라고 대답해도 괜찮지 않았을까?
+최근에 떠오르는 치명적인 단점은 **자바스크립트가 언어 차원에서 immutable함을 제공해주지 않는 다는 것**이다. 함수형 프로그래밍을 지원하는 것이 장점인 자바스크립트인데, 함수형과 땔래야 땔 수 없는 관계인 불변성을 지원하지 않는다니 꽤나 모순적이다. 아니 모순을 넘어서, 함수형이 대세로 떠어로는 요즘같은 때에는 치명적이라고 대답해도 괜찮지 않았을까?
 
 **자바스크립트 객체는 너무나도, 너무나도 동적이다.** 언제건 속성을 추가, 삭제, 수정할 수 있다. 클래스 밖에서도 언제든 클래스의 속성을 바꿀 수 있다. 함수형 프로그래밍에서 불변성은 정말 중요한 개념인데 자바스크립트는 너무나 쉽게 객체를 변경시킬 수 있다. 클래스와 관련된 다양한 간편 구문이 추가되었지만, 그것과 무관하게 객체의 속성은 언제든지 자유롭게 변경될 수 있다. 기본형 값은 바꿀 수 없지만, 기본형을 가리키는 변수의 상태는 바뀐다.
 
-const라는 키워드만으로는 함수형프로그래밍이 요구하는 수준의 불변성을 실현하기 어렵다. const로 객체를 선언할 경우 객체의 주소값 자체를 변경시킬 순 없어도, 객체 내부의 속성이 변경되는 것 까지는 막지 못하기 때문이다. 즉 객체의 속성값에 어떤 값이 추가되든 수정되든 삭제되든 지지고 볶든 삶아 먹든 기존 객체의 주소값은 동일한데, 그 것까지 const가 캐치할 순 없다.
+`const`라는 키워드만으로는 함수형프로그래밍이 요구하는 수준의 불변성을 실현하기 어렵다. `const`로 객체를 선언할 경우 객체의 주소값 자체를 변경시킬 순 없어도, 객체 내부의 속성이 변경되는 것 까지는 막지 못하기 때문이다. 즉 객체의 속성값에 어떤 값이 추가되든 수정되든 삭제되든 지지고 볶든 삶아 먹든 기존 객체의 주소값은 동일한데, 그것까지 `const`가 캐치할 순 없다.
 
 물론 자바스크립트 개발자들이 이런 현상을 두고도 가만히 있을리가 없다. `Object.assign`, `Object.freeze`등 불변성을 지키기위한 언어적 측면의 노력이 있지만 커다란 시스템에서 깊은 깊이까지의 불변성을 보장해 주지 못한다. 그래서 우리는 [immutable.js](https://github.com/immutable-js/immutable-js)같은 라이브러리의 도움을 받아야만 한다.
 
