오탈자 수정

--- a/_posts/kotlin/2019-05-24-property.md
+++ b/_posts/kotlin/2019-05-24-property.md
@@ -102,7 +102,7 @@ public final class Person {
 }
 ```
 
-코틀린 클래스 생성자에 `val`이나 `var`이 없는 경우는 딱 생성자에서만 사용 가능하다. 클래스의 멤버변수는 되지 못하기 때문에 클래스의 다른 메서드에서는 사용할 수 없다. 생성자에 `val`나 `var`가 없는 데이터의 경우 `init {...}`같은 생성자에서 사용할 수 있다.
+코틀린 클래스 생성자에 `val`이나 `var`이 없는 경우에는 주 생성자의 파라미터들은 딱 생성자(`init {...}`) 또는 프로퍼티를 초기화 하는 식에서만 사용 가능하다. 따라서 클래스의 생성자 외 다른 메서드에서는 사용할 수 없다(프로퍼티가 되지 못했기 때문).
 
 ```kotlin
 class Person(name: String) {
@@ -126,7 +126,7 @@ public final class Person {
 
 ### 주의할 점
 
-디컴파일한 자바 코드에서 필드가 private이라고 하여 코틀린의 프로퍼티도 private은 아니다. 이게 무슨말인가 싶겠지만, 필드와 프로퍼티를 다르게 인식할 줄 알아야 한다. 자바는 기본적으로 필드로 다루고, 코틀린은 프로퍼티(필드 + 접근자)를 기본으로 다루는 언어다.
+디컴파일한 자바 코드에서 필드가 private이라고 하여 코틀린의 프로퍼티도 private은 아니다. 이게 무슨말인가 싶겠지만, **필드와 프로퍼티를 다르게 인식할 줄 알아야 한다.** 자바는 기본적으로 필드로 다루고, 코틀린은 프로퍼티(필드 + 접근자)를 기본으로 다루는 언어다.
 
 ```kotlin
 class Person(var name: String)
