협력형 멀티태스킹 글 작성 완료

--- a/_posts/kotlin/2019-08-25-코틀린 코루틴 개념 익히기.md
+++ b/_posts/kotlin/2019-08-25-코틀린 코루틴 개념 익히기.md
@@ -62,3 +62,19 @@ Sub Routine은 루틴에 진입하는 지점과 루틴을 빠져나오는 지점
 
 이것도 역시 코드로 알아보자.
 ![image](https://user-images.githubusercontent.com/18481078/63651752-5fa0bb80-c793-11e9-80e7-9384265cf442.png)
+
+`drawPerson`이라는 함수가 있다. 이 함수 안에는 `startCoroutine`이라는 코루틴 빌더가 있다(**실제로 startCoroutine이라는 빌더는 존재하지 않는다. 실제 코루틴 라이브러리에는 다른방식으로 코루틴을 만들지만 여기서는 이해를 위해 쉽게 startCoroutine이라고 사용한다**).
+
+`startCoroutin`이라는 코루틴을 만나게 되면 해당 함수는 코루틴으로 작동할 수 있다. 따라서 언제든 함수실행중간에 나갈수도 있고, 다시 들어올수도 있는 자격이 부여되는 것이다. 언제 코루틴을 중간에 나갈수 있을까? suspend로 선언된 함수를 만나면 코루틴 밖으로 잠시 나갈 수 있다.
+
+이제 순서를 따라 가보자.
+
+1. 쓰레드의 Main함수가 `drawPerson()`을 호출하면 `startCoroutine`블럭을 만나 코루틴이 된다. 위에도 말했듯이 이제 `drawPerson()`은 진입점과 탈출점이 여러개가 되는 자격이 주어진 것이다.
+
+2. 코루틴이 실행이 되었지만, suspend를 만나기 전까지는 그다지 특별한 힘이 없다. suspend로 정의된 함수가 없다면 그냥 마지막 괄호를 만날 때 까지 계속 실행된다. 그러나 drawHead()는 suspend 키워드로 정의되어진 함수다. 따라서 drwaHead() 부분에서 더 이상 아래 코드를 실행하지 않고 drawPerson() 코루틴 함수를 탈출한다.
+
+3. 메인 쓰레드가 해당 코루틴을 탈출했다. 그렇다고 쓰레드가 놀고 있을리는 없다. 우리가 짜놓은 다른 코드들을 실행할 수도 있고, 안드로이드라면 다른 애니메이션 처리를 할 수도 있다. 그러나 **Head는 어디선가 계속 그려지고 있다.** `drwaHead()`는 2초가 걸리는 suspend 함수였음을 기억하자. 이 함수부분에서 코루틴을 탈출했지만, 이 함수의 기능은 메인쓰레드에서 동시성 프로그래밍으로 작동하고 있을수도 있고, 다른 쓰레드에서 돌아가고 있을 수도 있다. 그것은 개발자가 자유롭게 선택할 수 있다(이해가 되지 않아도 좋다. 바로 뒤에서 다시 설명한다!).
+
+4. 그렇게 메인쓰레드가 다른 코드들을 실행하다가도, `drawHead()`가 제 역할을 다 끝내면 다시 아까 탈출했던 코루틴 `drawPerson()`으로 돌아온다. 아까 멈추어놓았던 `drawHead()` 아래인 `drawBody()`부터 재개(resume)된다.
+
+위의 과정에서 보았듯이 코루틴 함수는 언제든지 나왔다가 다시 들어올 수 있다. 이 대목에서 이미 눈치를 챈 분들도 있을것 같은데, 코루틴의 이런 성향은 동시성 프로그래밍과 밀접한 관계가 있다.
