--- a/_posts/kotlin/2019-08-25-코틀린 코루틴 개념 익히기.md
+++ b/_posts/kotlin/2019-08-25-코틀린 코루틴 개념 익히기.md
@@ -18,7 +18,7 @@ comments: true
 
 ![image](https://user-images.githubusercontent.com/18481078/63651520-7e518300-c790-11e9-9fd6-578fd819bb73.png)
 
-앱이든 웹이든 비동기 처리가 핵심인 클라이언트 프로그래밍에서 지금까지 가장 핫한 키워드는 [rx programming](http://reactivex.io/)일 것이다. 그러나 구글이 안드로이드 공식 언어를 자바에서 코틀린으로 변경한 이후, 최근 들어 대표적인 샘플 예제들인 [bluprint](https://github.com/googlesamples/android-architecture/tree/master)와 [sunflower](https://github.com/googlesamples/android-sunflower) 앱의 비동기처리를 coroutine으로 바꾸었다(아직 rx로 짠 코드를 특정 브랜치로 남겨놓고 있긴하다). Rx 라이브러리를 걷어내고 코루틴으로 새로 작성한 것이다. 이와 더불어 상당히 많은 외국 자료들이 올라오고있다. 그 이유는 코루틴을 사용하면 비동기 처리가 너무나도 쉽게 이루어 질 수 있기 때문이라고 생각한다. 이 이유 만으로 코루틴을 공부해볼 가치는 충분하다.
+앱이든 웹이든 비동기 처리가 핵심인 클라이언트 프로그래밍에서 지금까지 가장 핫한 키워드는 [rx programming](http://reactivex.io/)일 것이다. 그러나 구글이 안드로이드 공식 언어를 자바에서 코틀린으로 변경한 이후, 최근 들어 대표적인 샘플 예제들인 [bluprint](https://github.com/googlesamples/android-architecture/tree/master)와 [sunflower](https://github.com/googlesamples/android-sunflower) 앱의 비동기처리를 coroutine으로 바꾸었다(아직 rx로 짠 코드를 특정 브랜치로 남겨놓고 있긴하다). Rx 라이브러리를 걷어내고 코루틴으로 새로 작성한 것이다. 이와 더불어 상당히 많은 외국 자료들이 올라오고있다. 그 이유는 코루틴을 사용하면 비동기 처리가 너무나도 쉽게 이루어 질 수 있기 때문이라고 생각한다. 이런 이유 만으로 코루틴을 공부해 볼 가치는 충분하다.
 
 ## 코루틴이란!
 
@@ -34,7 +34,7 @@ comments: true
 
 협력형 멀티태스킹을 프로그래밍 언어로 표현하자면
 Co + Routine 이다.
-**Co**라는 접두어는 "협력", "함께"라는 의미를 지니고 있다. **Routine**은 하나의 태스크, 함수 정도로 생각하면 된다. 더 진도를 나가기에 앞서 Routine에 대해서 좀 더 알아보자.
+**Co**라는 접두어는 "협력", "함께"라는 의미를 지니고 있다. **Routine**은 하나의 태스크, 함수 정도로 생각하면 된다. 즉 협력하는 함수다. 더 진도를 나가기에 앞서 Routine에 대해서 좀 더 알아보자.
 
 Routine에는 우리가 흔히 알고있는 main routine과 sub routine이 존재한다. 이런 단어들이 생소할 수도 있지만, 우리가 늘 작성하고 있는 코드들이다.
 ![image](https://user-images.githubusercontent.com/18481078/63651600-6a5a5100-c791-11e9-87d1-3f81dc9b415d.png)
@@ -78,3 +78,31 @@ Sub Routine은 루틴에 진입하는 지점과 루틴을 빠져나오는 지점
 4. 그렇게 메인쓰레드가 다른 코드들을 실행하다가도, `drawHead()`가 제 역할을 다 끝내면 다시 아까 탈출했던 코루틴 `drawPerson()`으로 돌아온다. 아까 멈추어놓았던 `drawHead()` 아래인 `drawBody()`부터 재개(resume)된다.
 
 위의 과정에서 보았듯이 코루틴 함수는 언제든지 나왔다가 다시 들어올 수 있다. 이 대목에서 이미 눈치를 챈 분들도 있을것 같은데, 코루틴의 이런 성향은 동시성 프로그래밍과 밀접한 관계가 있다.
+
+### 동시성 프로그래밍
+
+함수를 중간에 빠져나왔다가, 다른 함수에 진입하고, 다시 원점으로 돌아와 멈추었던 부분부터 다시 시작하는 이 특성은 동시성 프로그래밍을 가능하게 한다.
+
+동시성 프로그래밍의 개념을 잡고가자면, 병행성 프로그래밍과 완전히 다른 개념이다. 예를 들어 양쪽에 놓여진 두 개의 도화지에 사람 그림을 각자 그린다고 가정해보자.
+![image](https://user-images.githubusercontent.com/18481078/63692638-1dd44b80-c84d-11e9-952f-c78a58bec3e0.png)
+
+동시성 프로그래밍이란 오른쪽 손에만 펜을 쥐고서 왼쪽 도화지에 사람 일부를 조금 그리고, 오른쪽 도화지에가서 잠시 또 사람을 그리고, 다시 왼쪽 도화지에 사람을 찔끔 그리고... 이 행위를 아주 빨리 반복하는 것이다. 사실 내가 쥔 펜은 한 순간에 한 가지 도화지에 닿는다. 그러나 이 행위를 멀리서 본다면 마치 동시에 그림이 그려지고 있는 것 처럼 보일 것이다. 이것이 동시성 프로그래밍이다.
+
+병행성 프로그래밍은 이 것과 다르다. 병행성은 실제로 양쪽손에 펜을 하나씩 들고서 왼쪽과 오른쪽에 실제로 그림을 동시에 그리는 것이다. 같은 시간동안 병행해서 그림을 그리는 것이다.
+
+코루틴은 개념자체로만 보면 병행성이아니라 동시성을 지원하는 개념이다. 위의 설명을 코드로 다시 살펴보자.
+![image](https://user-images.githubusercontent.com/18481078/63692912-b9fe5280-c84d-11e9-9c8c-88b2bf5ade73.png)
+
+코루틴도 루틴이다. 즉 쓰레드가 아니라 일반 서브루틴과 비슷한 루틴이기 때문에 하나의 쓰레드에 여러개가 존재할 수 있다.
+
+위의 코드에서는 메인 쓰레드에 코루틴이 두 개가 있다. 하나는 왼쪽 도화지에 그림을 그리는 코드고 다른 하나는 오른쪽 도화지에 그림을 그리는 코드다. 메인 쓰레드가 실행되면서 먼저 왼쪽 코루틴인 `drawPersonToPaperA()`라는 함수를 만났다고 가정해보자. 해당 함수는 가상 코루틴 빌더인 startCoroutine {} 블럭으로 인해 코루틴이 되고, 함수를 중간에 나갔다가 다시 들어올 수 있는 힘을 얻게된다. `drawPersonToPaperA()`가 호출되어 suspend함수인 `drawHead()`를 만나게 되면 이 코루틴을 잠시 빠져나간다.
+
+왼쪽 코루틴을 빠져나갔지만 그렇다고 메인쓰레드가 가만히 놀고있진 않는다. 다른 suspend 함수들을 찾거나 resume되어지는 다른 코드들을 찾는다. 왼쪽 코루틴의 경우 2초 동안 drawHead()작업을 하게된다. 그러나 delay(2000)는 쓰레드를 블락시키지 않으므로 다른 일들을 할 수가 있다. 뿐만 아니라 drawHead()함수 안에서 다른 쓰레드를 실행시킨다면 병행적으로도 실행이 가능하다. 왼쪽 코루틴을 빠져나온 쓰레드가 오른쪽 코루틴을 만나게 되어 또 한번 suspend 함수를 만나게 되면 아까 도화지 그림에서 설명한 것과 같은 현상이 일어난다. 아까 오른손에 펜을 쥐고 왼쪽과 오른쪽 도화지를 아주빠르게 왔다 갔다 하면서 그림을 그리는 것 같은 셈이다. **이렇게 코루틴을 사용하여 쓰레드 하나에서 동시성 프로그래밍이 가능하다**
+
+코루틴을 생성해서 동시성 프로그래밍을 하는 것은, 쓰레드를 사용해서 동시성 프로그래밍을 하는것과 차원이 다른 효율성을 제공한다. 위에서 말한 동작을 쓰레드 두 개를 만들어 실행한다고 가정해보자.
+![image](https://user-images.githubusercontent.com/18481078/63693725-c7b4d780-c84f-11e9-9158-0d6b65c614fe.png)
+
+왼쪽 쓰레드는 왼쪽 도화지에, 오른쪽 쓰레드는 오른쪽 도화지에 그림을 그리는 쓰레드이다. 그러나 CPU는 단 한 개뿐이다. 따라서 왼쪽에 조금, 오른쪽에 조금을 반복하기 위해선 CPU가 매번 쓰레드를 점유했다가 놓아주고, 새로운 쓰레드를 점유했다가 놓아주고를 반복해야 한다. 이를 [컨텍스트 스위칭](https://ko.wikipedia.org/wiki/%EB%AC%B8%EB%A7%A5_%EA%B5%90%ED%99%98)이라고 한다. 하나의 쓰레드에서 단순히 함수를 왔다 갔다 하는것과는 다르게 꽤 비용이 드는 작업이다.
+
+아래는 "함수형 코루틴"이라는 책에나오는 구문이다.
+![image](https://user-images.githubusercontent.com/18481078/63693907-2d08c880-c850-11e9-8160-9198c9a755d1.png)
