코틀린 코루틴 개념 익히기 포스팅 작성

--- a/_posts/kotlin/2019-08-25-코틀린 코루틴 개념 익히기.md
+++ b/_posts/kotlin/2019-08-25-코틀린 코루틴 개념 익히기.md
@@ -73,7 +73,7 @@ Sub Routine은 루틴에 진입하는 지점과 루틴을 빠져나오는 지점
 
 2. 코루틴이 실행이 되었지만, suspend를 만나기 전까지는 그다지 특별한 힘이 없다. suspend로 정의된 함수가 없다면 그냥 마지막 괄호를 만날 때 까지 계속 실행된다. 그러나 drawHead()는 suspend 키워드로 정의되어진 함수다. 따라서 drwaHead() 부분에서 더 이상 아래 코드를 실행하지 않고 drawPerson() 코루틴 함수를 탈출한다.
 
-3. 메인 쓰레드가 해당 코루틴을 탈출했다. 그렇다고 쓰레드가 놀고 있을리는 없다. 우리가 짜놓은 다른 코드들을 실행할 수도 있고, 안드로이드라면 다른 애니메이션 처리를 할 수도 있다. 그러나 **Head는 어디선가 계속 그려지고 있다.** `drwaHead()`는 2초가 걸리는 suspend 함수였음을 기억하자. 이 함수부분에서 코루틴을 탈출했지만, 이 함수의 기능은 메인쓰레드에서 동시성 프로그래밍으로 작동하고 있을수도 있고, 다른 쓰레드에서 돌아가고 있을 수도 있다. 그것은 개발자가 자유롭게 선택할 수 있다(이해가 되지 않아도 좋다. 바로 뒤에서 다시 설명한다!).
+3. 메인 쓰레드가 해당 코루틴을 탈출했다. 그렇다고 쓰레드가 놀고 있을리는 없다. 우리가 짜 놓은 다른 코드들을 실행할 수도 있고, 안드로이드라면 UI 애니메이션을 처리 할 수도 있다. 그러나 **Head는 어디선가 계속 그려지고 있다.** `drwaHead()`는 2초가 걸리는 suspend 함수였음을 기억하자. 이 함수부분에서 코루틴을 탈출했지만, 이 함수의 기능은 메인쓰레드에서 동시성 프로그래밍으로 작동하고 있을수도 있고, 다른 쓰레드에서 돌아가고 있을 수도 있다. 그것은 개발자가 자유롭게 선택할 수 있다(이해가 되지 않아도 좋다. 바로 뒤에서 다시 설명한다!).
 
 4. 그렇게 메인쓰레드가 다른 코드들을 실행하다가도, `drawHead()`가 제 역할을 다 끝내면 다시 아까 탈출했던 코루틴 `drawPerson()`으로 돌아온다. 아까 멈추어놓았던 `drawHead()` 아래인 `drawBody()`부터 재개(resume)된다.
 
@@ -106,3 +106,56 @@ Sub Routine은 루틴에 진입하는 지점과 루틴을 빠져나오는 지점
 
 아래는 "함수형 코루틴"이라는 책에나오는 구문이다.
 ![image](https://user-images.githubusercontent.com/18481078/63693907-2d08c880-c850-11e9-8160-9198c9a755d1.png)
+
+### 비동기 처리가 이렇게 편해지다니
+
+위에서 설명한 코틀린의 능력으로 비동기 처리가 굉장히 쉬워진다. 심지어는 이게 비동기 처리인가? 싶을 정도로 읽기 쉽고 짜기도 쉬운 코드를 볼 수 있다(코루틴만세).
+
+한 가지 예시를 들어보겠다. 어느 회사원의 아침 기상으로부터 회사에 도착하기 까지의 과정이다(사실은 내이야기다 ㅎㅎ..; ).
+
+1. 8시 기상
+2. 샤워하기
+3. 옷입기
+4. 출발하기
+5. 회사도착하기
+6. 일하기
+
+위의 시나리오는 꼭 순서대로 이뤄져야하는 작업이다. 기상하지도 않았는데 옷을 입을수 없고, 옷을 입지 않았는데 출근을 할 수도 없다. 또한 각 과정은 시간이 오래 걸리는 작업이라고 가정하자. 코드로 치면 네트워크 처리쯤?
+
+#### callback
+
+가장 먼저 callback을 사용해 구현해보자.
+![image](https://user-images.githubusercontent.com/18481078/63697820-97be0200-c858-11e9-9a25-c9bd7357125d.png)
+
+콜백으로 비동기 처리를 구현했을 때 흔히 겪을 수 있는 콜백 헬이다. 심지어 에러 처리도 하지 않는 코드인데 벌써 보기가 어렵다. 비동기 처리를 위한 다양한 방법론이 나오기 전에는 대부분 이런방식으로 처리했다.
+
+안드로이드 프로그래밍에서 공기와도 같은 존재가 된 RxJava, RxKotlin으로 짜여진 동일한 코드를 보자.
+
+#### RxKotlin
+
+![image](https://user-images.githubusercontent.com/18481078/63697994-eb305000-c858-11e9-823c-f999c4312857.png)
+
+콜백 코드보다 훨씬 눈에 잘 들어오는 것 같다. 왜 잘들어 올까? `wakeUp()`, `takeShower()`, `putOnShirt()` 등등의 함수들이 보통 사람이 생각하는 것 처럼 순차적으로 보이기 때문이 아닐까? 즉 각 과정의 함수들이 동일한 depth를 유지하며 동기적인 코드처럼 보이기 때문에 훨씬 보기가 편해졌다.
+
+그런데 Rx를 모르는 사람이 이 코드를 본다면 어떨까? Observable이 무엇인지, just가 무엇인지, flatMap은 무엇인지... 코드를 보면 어지러울수도 있다. 뿐만 아니라 사실 Rx가 제공하는 마법같은 operation들이 상당히 많기 때문에 학습곡선이 꽤 높기로 유명하다.
+
+하지만 Rx를 아는사람들 끼리는 너무나도 좋은 도구인것은 확실하며 높은 학습 곡선 만큼 효율성도 크다. 아무튼 Rx로 짜면 이런 식이다.
+
+#### Kotlin + coroutine
+
+이번엔 마지막으로 Kotlin + coroutine 조합을 보자.
+![image](https://user-images.githubusercontent.com/18481078/63698688-4f074880-c85a-11e9-90d5-5a8d7203402f.png)
+
+"이게 비동기 처리를 하는 코드라고?"라는 생각이 들 수도 있다. 그러나 분명히 비동기 코드다! 안에서 호출되는 각 함수들은 분명히 네트워크를 타고 실행되야하는 오래걸리는 작업이고, 언제 끝날지 모르는 비동기 작업들이지만 각자 함수들의 순서는 정확히 지켜진다. `takeShower()`함수는 `wakeUp()`함수가 끝나야만 실행되고, `putOnShirt()`함수는 `takeShower()`함수가 끝나야만 실행된다.
+
+이게 가능한 이유는, `goCompany`라는 함수가 코루틴이기에 `wakeUp`을 만나면 `wakeUp`함수를 실행함과 동시에(여기서는 백그라운드 스레드에서 동시에 실행될 것이다.) 잠시 `goCompay`를 빠져나간다. 그러다가 `wakeUp`이 자신의 일을 끝마치면 다시 `goCompany`로 돌아올 수 있기 때문이다. 이게 코루틴으로 비동기 처리를 할 때 생기는 장점이다.
+
+#### Bonus
+
+코루틴이 무엇인지, 사용하면 어떤 이점이 있는지에 대해서 글을 작성해보았다. 개인적으로 코루틴을 공부할때 한 가지 궁금했던점이 있었다. "대충 개념은 알겠는데... 어떻게 함수를 중간에 왔다 갔다 할수 있는거지?"에 대한 궁금증이었다.
+
+이걸 가능하게 하는 방법론이라고 해야할까? 키워드라 해야할까. 아무튼 이 글에서 다루기에는 또 너무 방대한 이야기가 되므로 툭 던져놓자면 [CPS(Continuatino Passing Style)](http://dogfeet.github.io/articles/2012/by-example-continuation-passing-style-in-javascript.html)이다.
+
+## 끄
+
+읕
