코틀린 코루틴 개념 익히기 글 수정

--- a/_posts/kotlin/2019-08-25-코틀린 코루틴 개념 익히기.md
+++ b/_posts/kotlin/2019-08-25-코틀린 코루틴 개념 익히기.md
@@ -111,7 +111,7 @@ Sub Routine은 루틴에 진입하는 지점과 루틴을 빠져나오는 지점
 
 위에서 설명한 코틀린의 능력으로 비동기 처리가 굉장히 쉬워진다. 심지어는 이게 비동기 처리인가? 싶을 정도로 읽기 쉽고 짜기도 쉬운 코드를 볼 수 있다(코루틴만세).
 
-한 가지 예시를 들어보겠다. 어느 회사원의 아침 기상으로부터 회사에 도착하기 까지의 과정이다(사실은 내이야기다 ㅎㅎ..; ).
+한 가지 예시를 들어보겠다. 필자의 아침 기상으로부터 회사에 도착하기 까지의 과정이다.
 
 1. 8시 기상
 2. 샤워하기
@@ -149,6 +149,12 @@ Sub Routine은 루틴에 진입하는 지점과 루틴을 빠져나오는 지점
 "이게 비동기 처리를 하는 코드라고?"라는 생각이 들 수도 있다. 그러나 분명히 비동기 코드다! 안에서 호출되는 각 함수들은 분명히 네트워크를 타고 실행되야하는 오래걸리는 작업이고, 언제 끝날지 모르는 비동기 작업들이지만 각자 함수들의 순서는 정확히 지켜진다. `takeShower()`함수는 `wakeUp()`함수가 끝나야만 실행되고, `putOnShirt()`함수는 `takeShower()`함수가 끝나야만 실행된다.
 
 이게 가능한 이유는, `goCompany`라는 함수가 코루틴이기에 `wakeUp`을 만나면 `wakeUp`함수를 실행함과 동시에(여기서는 백그라운드 스레드에서 동시에 실행될 것이다.) 잠시 `goCompay`를 빠져나간다. 그러다가 `wakeUp`이 자신의 일을 끝마치면 다시 `goCompany`로 돌아올 수 있기 때문이다. 이게 코루틴으로 비동기 처리를 할 때 생기는 장점이다.
+
+### 결론
+
+비동기 처리에 있어서 Rx는 매우 훌륭한 도구이고 나 역시 코루틴을 공부하기 전까지는 더 할나위 없는 기술이라 생각하며 사용해 왔다. 그러나 이제는 생각이 바뀌었다. Rx를 사용하는 가장 주된 이유 중 하나가 비동기 처리인데, 결국은 Rx도 비동기 처리를 쉽게 하기 위한 하나의 발악이라고 볼 수 있기 때문이다. 결국 발악은 발악이고 궁극적으로 비동기 처리를 위하여 여러가지 헬퍼 코드들이 덕지 덕지 붙게 된다. 반면 코루틴은 비동기 처리를 하기 위해 그런 발악, 또는 시도를 거부하는 것 처럼 느껴진다. 마치 "왜 비동기 처리 때문에 고생하니? 그냥 동기처럼 짜면 그만인데"라고 이야기하는 것 같다.
+
+코루틴을 공부하고도 Rx를 더 선호하는 사람이 있을 수 있고, 코루틴에 푹 빠지게 되는 사람도 있을 것이다. 무엇이 더 좋고 더 나쁜가에 대한 정답은 없지만, 개인 적인 생각으로는 비동기 처리의 궁극적인 모습은 마치 비동기 코드가 아닌것 처럼 짜는 모습이 아닐까 생각한다.
 
 #### Bonus
 
