오탈자 수정

--- a/_posts/android/2019-07-13-liveData변형하기.md
+++ b/_posts/android/2019-07-13-liveData변형하기.md
@@ -35,7 +35,7 @@ println(list2) // [ 2, 4, 6 ]
 ```kotlin
 val userLiveData: MutableLiveData<User> = repository.getUser(id)
 val userNameLiveData: LiveData<String> = Transformations.map(userLiveData) { user ->
-      return user.firstName + " " + user.lastName
+    user.firstName + " " + user.lastName
 }
 ```
 
