오탈자 수정

--- a/_posts/kotlin/2019-08-25-코틀린 코루틴 개념 익히기.md
+++ b/_posts/kotlin/2019-08-25-코틀린 코루틴 개념 익히기.md
@@ -65,7 +65,7 @@ Sub Routine은 루틴에 진입하는 지점과 루틴을 빠져나오는 지점
 
 `drawPerson`이라는 함수가 있다. 이 함수 안에는 `startCoroutine`이라는 코루틴 빌더가 있다(**실제로 startCoroutine이라는 빌더는 존재하지 않는다. 실제 코루틴 라이브러리에는 다른방식으로 코루틴을 만들지만 여기서는 이해를 위해 쉽게 startCoroutine이라고 사용한다**).
 
-`startCoroutin`이라는 코루틴을 만나게 되면 해당 함수는 코루틴으로 작동할 수 있다. 따라서 언제든 함수실행중간에 나갈수도 있고, 다시 들어올수도 있는 자격이 부여되는 것이다. 언제 코루틴을 중간에 나갈수 있을까? suspend로 선언된 함수를 만나면 코루틴 밖으로 잠시 나갈 수 있다.
+`startCoroutine`이라는 코루틴을 만나게 되면 해당 함수는 코루틴으로 작동할 수 있다. 따라서 언제든 함수실행중간에 나갈수도 있고, 다시 들어올수도 있는 자격이 부여되는 것이다. 언제 코루틴을 중간에 나갈수 있을까? suspend로 선언된 함수를 만나면 코루틴 밖으로 잠시 나갈 수 있다.
 
 이제 순서를 따라 가보자.
 
