string + html 리소스 출력 방법 포스팅

--- a/_posts/android/2019-06-14-android메모.md
+++ b/_posts/android/2019-06-14-android메모.md
@@ -27,6 +27,29 @@ ContextCompat.getColor(context, R.color.colorBlabla)
 - [[Android] 글자에 옷을 입혀보자 (Spannable 사용하기) - 여름숲](https://re-build.tistory.com/13)
 - [Android spannable (textview) - 김형섭의 개발공간](https://sub-dev.tistory.com/10)
 
+## DataBinding + String resource + Html
+
+resource + html
+
+```xml
+<string name="my_text"><![CDATA[<font color=#FF7815>안녕하세요.</font>]]>안드로이드 개발자입니다.</string>
+```
+
+layout xml + databinding
+
+```xml
+<data>
+    <import type="androidx.core.text.HtmlCompat" />
+</data>
+....
+<TextView
+    ...
+     android:text="@{HtmlCompat.fromHtml(@string/receive_this_month_info1, HtmlCompat.FROM_HTML_MODE_COMPACT)}"
+    ...
+/>
+</TextView>
+```
+
 # Recycler view
 
 ##### 패딩값 설정
