--- a/_posts/android/2019-06-14-android메모.md
+++ b/_posts/android/2019-06-14-android메모.md
@@ -142,3 +142,24 @@ override fun onOptionsItemSelected(item: MenuItem?): Boolean {
         return super.onOptionsItemSelected(item)
     }}
 ```
+
+# style
+
+statusBar color와 statusBar icon들의 색상 변경
+
+```xml
+<style name="DarkStatusDialog" parent="ThemeOverlay.AppCompat.Dark">
+    <item name="android:statusBarColor">@color/colorStatusBarBackground</item>
+    <item name="android:windowLightStatusBar">false</item>
+</style>
+```
+
+`statusBarColor`로 status bar의 배경색을 지정하고, `windowLightStatusBar`로 밝음 색임을 알려주면 icon 색상이 어둡게 나타난다.
+
+적용할 view Class에서 아래와 같이 적용해줌.
+
+```xml
+init {
+    setStyle(STYLE_NO_TITLE, R.style.DarkStatusDialog)
+}
+```
