코루틴 포스트 수정

--- a/_posts/kotlin/2019-08-25-코틀린 코루틴 개념 익히기.md
+++ b/_posts/kotlin/2019-08-25-코틀린 코루틴 개념 익히기.md
@@ -39,7 +39,7 @@ Co + Routine 이다.
 Routine에는 우리가 흔히 알고있는 main routine과 sub routine이 존재한다. 이런 단어들이 생소할 수도 있지만, 우리가 늘 작성하고 있는 코드들이다.
 ![image](https://user-images.githubusercontent.com/18481078/63651600-6a5a5100-c791-11e9-87d1-3f81dc9b415d.png)
 
-위의 자바 코드를 보자(자바 개발자가 대다수인 사내 세미나 목적으로 만든 자료라서 Java코드가 섞여있다...).
+위의 자바 코드를 보자(이후부터는 코틀린으로 다룬다).
 `main`함수가 말 그대로 Main 함수다. 메인이 되는 함수인 것이다. 그리고 메인이 되는 함수는 다른 서브 함수인 plusOne을 호출한다. 우리가 짜는 프로그램은 흔이 이렇게 되어있다. 너무 익숙한 흐름이라 어려울 것이 전혀없다.
 
 그런데 이 Sub Routine을 살펴보면 한가지 특징이 있다. 아래 그림을 보자.
