안드로이드 메모 키워드 추가

--- a/_posts/android/2019-06-14-android메모.md
+++ b/_posts/android/2019-06-14-android메모.md
@@ -163,3 +163,11 @@ init {
     setStyle(STYLE_NO_TITLE, R.style.DarkStatusDialog)
 }
 ```
+
+### ScrollView
+
+SrollView 내부의 중간 내용물이 적어도, 특정 뷰를 레이아웃 하단에 고정시키고 싶은 경우 키워드 -> fillViewport=true
+
+### ImageView
+
+이미지의 가로세로 비율에 따라 크기를 조절해주는 키워드 -> android:adjustViewBounds = true
