제네릭 포스팅

--- a/_posts/kotlin/2020-02-27-변성(in, out)이해하기 1편.md
+++ b/_posts/kotlin/2020-02-27-변성(in, out)이해하기 1편.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 변성(공변성 out, 반공변 in) 이해하기 1편
+title: 변성(공변성 out, 반공변 in) 이해하기 1편 - 제네릭
 category: Kotlin
 tags: [Variance, Generic]
 comments: true
@@ -81,3 +81,44 @@ fun feed(animal: Cat) {
 런타임시 형변환이 일어나는게 아니라서 성능상 이슈가 없다.
 
 ### 안정적이고 범용적인 개발 목적
+
+제네릭을 사용하면 안정적이고 범용적인 api 개발이 가능한데, 사실상 위에서 설명한 형변환과 맥락을 같이 한다.
+
+제네릭 없이도 범용적인 api를 만들 수 있다(다만 안전하지 못하다).
+제네릭을 사용한 범용 클래스와 제네릭을 사용하지 않고 만든 범용 클래스를 비교해보자.
+
+먼저 제네릭을 사용한`MyList`라는 클래스를 만들어 보자(단지 List에서 필요한 기능만 가져다 쓰는 Wrapping 클래스이니 실용성은 없다. 예시로만 바라보자).
+
+```kotlin
+class MyList<T>() {
+    private val myList: mutableListOf<T>()
+    fun add(e: T) {
+        myList.add(e)
+    }
+    fun get(index: Int): T {
+        return myList.get(index)
+    }
+}
+```
+
+제네릭을 사용해서 어떤 타입의 객체가 오든 범용적으로 사용할 수 있는 MyList를 만들었다.
+
+위 코드에서 타입 파라미터를 선언한 <> 부분을 지우고, T가 쓰인 곳을 모두 Any로 바꾸면 역시 범용적인 클래스가 된다.
+
+```kotlin
+class MyList() {
+    private val myList = mutableListOf<Any>() // List도 같은 원리로 제네릭을 제거할 순 있지만, 이미 제공되는 클래스니 건들지 않겠다.
+    fun add(e: Any) {
+        myList.add(Any)
+    }
+    fun get(index: Int): Any {
+        return myList.get(index)
+    }
+}
+```
+
+myList가 Any를 타입으로 받기 때문에, 어떤 객체든 올 수 있는 범용적인 api가 되었다. 다만, MyList의 `get()`을 사용하여 내가 `add`해주었던 객체를 꺼내올때는, 어떤 타입의 객체를 넣어주었는지에 따라서 매번 형변환을 해주어야 한다는 단점이 있다. 만약 `String` 타입을 `add` 했는데, 꺼내올때 실수로 `Int`형으로 형변환을 하면 런타임 에러가 나게됨으로 안전하지 못한 api다.
+
+지금까지 제네릭에 대해 알아보았다. 정적 타입 언어에서는 제네릭을 사용함으로써 생기는 재미난 현상이 있다. 바로 **변성**이다. 조금 복잡하지만 알아두면 더 범용적인 api를 개발할 수 있다.
+
+본젹적인 변성에 대한 내용은 [변성(공변성 out, 반공변 in) 이해하기 2편 - 변성이란]()에서 알아보자.
