--- a/_posts/android/2019-06-14-android메모.md
+++ b/_posts/android/2019-06-14-android메모.md
@@ -164,20 +164,44 @@ init {
 }
 ```
 
-### ScrollView
+# ScrollView
 
 SrollView 내부의 중간 내용물이 적어도, 특정 뷰를 레이아웃 하단에 고정시키고 싶은 경우 키워드 -> fillViewport=true
 
-### ImageView
+# ImageView
 
 이미지의 가로세로 비율에 따라 크기를 조절해주는 키워드 -> android:adjustViewBounds = true
 
-### Glide4
+# Glide4
 
-Glide4 에서 이미지 Boder 간단하게 처리하기
+## Glide4 에서 이미지 Border 간단하게 처리하기
 
 ```kotlin
 GlideApp.with(context).load("imageUrl")
             .transform(RoundedCorners(50))
             .into(imageView)
+```
+
+## 리사이클러뷰와 동적 높이를 가진 이미지 랜더링
+
+아래와 같이 설정하면 채팅과 같이 동적인 비율의 이미지가 많이 랜더링 되는 화면에서 버벅임 없이 비율에 맞게 이미지가 표시된다.
+(이미지 가로를 고정하고, 높이를 wrap_content로 주었을 땐 심하게 버벅임이 일어난다.)
+
+```kotlin
+GlideApp.with(context)
+        .load("imageUrl")
+        .override(500, 500)
+        .into(imageView)
+```
+
+```xml
+<androidx.appcompat.widget.AppCompatImageView
+    android:id="@+id/imageView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:adjustViewBounds="true"
+    android:background="@color/transparent"
+    android:maxWidth="200dp"
+    android:maxHeight="400dp"
+/>
 ```
