--- a/_posts/kotlin/2019-08-25-코틀린 코루틴 개념 익히기.md
+++ b/_posts/kotlin/2019-08-25-코틀린 코루틴 개념 익히기.md
@@ -71,9 +71,9 @@ Sub Routine은 루틴에 진입하는 지점과 루틴을 빠져나오는 지점
 
 1. 쓰레드의 Main함수가 `drawPerson()`을 호출하면 `startCoroutine`블럭을 만나 코루틴이 된다(정확하게는 하나의 코루틴을 만들어 시작한다). 위에도 말했듯이 이제 `drawPerson()`은 진입점과 탈출점이 여러개가 되는 자격이 주어진 것이다.
 
-2. 코루틴이 실행이 되었지만, `suspend`를 만나기 전까지는 그다지 특별한 힘이 없다. `suspend`로 정의된 함수가 없다면 그냥 마지막 괄호를 만날 때 까지 계속 실행된다. 그러나 `drawHead()`는 `suspend` 키워드로 정의되어진 함수다. 따라서 `drwaHead()` 부분에서 더 이상 아래 코드를 실행하지 않고 `drawPerson()`이라는 코루틴 함수를 (잠시)탈출한다.
+2. 코루틴이 실행이 되었지만, `suspend`를 만나기 전까지는 그다지 특별한 힘이 없다. `suspend`로 정의된 함수가 없다면 그냥 마지막 괄호를 만날 때 까지 계속 실행된다. 그러나 `drawHead()`는 `suspend` 키워드로 정의되어진 함수다. 따라서 `drawHead()` 부분에서 더 이상 아래 코드를 실행하지 않고 `drawPerson()`이라는 코루틴 함수를 (잠시)탈출한다.
 
-3. 메인 쓰레드가 해당 코루틴을 탈출했다. 그렇다고 쓰레드가 놀고 있을리는 없다. 우리가 짜 놓은 다른 코드들을 실행할 수도 있고, 안드로이드라면 UI 애니메이션을 처리 할 수도 있다. 그러나 **Head는 어디선가 계속 그려지고 있다.** `drawHead()`는 2초가 걸리는 `suspend` 함수였음을 기억해보자. `drawHead()`라는 `suspend`를 만나 코루틴을 탈출했지만, `drawHead()` 함수의 기능은 메인쓰레드에서 동시성 프로그래밍으로 작동하고 있을수도 있고, 다른 쓰레드에서 돌아가고 있을 수도 있다. 그것은 개발자가 자유롭게 선택할 수 있다(이해가 되지 않아도 좋다. 바로 뒤에서 다시 설명한다).
+3. 메인 쓰레드가 해당 코루틴을 탈출했다. 그렇다고 쓰레드가 놀고 있을리는 없다. 우리가 짜 놓은 다른 코드들을 실행할 수도 있고, 안드로이드라면 UI 애니메이션을 처리 할 수도 있다. 그러나 **Head는 어디선가 계속 그려지고 있다.** `drawHead()`는 2초가 걸리는 `suspend` 함수였음을 기억해보자. `drawHead()`라는 `suspend`를 만나 코루틴을 탈출했지만, `drawHead()` 함수의 기능은 메인쓰레드에서 동시성 프로그래밍으로 작동하고 있을수도 있고, 다른 쓰레드에서 돌아가고 있을 수도 있다. 그것은 **개발자가 자유롭게 선택할 수 있다**(이해가 되지 않아도 좋다. 바로 뒤에서 다시 설명한다).
 
 4. 그렇게 메인쓰레드가 다른 코드들을 실행하다가도, `drawHead()`가 제 역할을 다 끝내면 다시 아까 탈출했던 코루틴 `drawPerson()`으로 돌아온다. 아까 멈추어놓았던 `drawHead()` 아래인 `drawBody()`부터 재개(resume)된다.
 
