--- a/_posts/kotlin/2019-05-24-property.md
+++ b/_posts/kotlin/2019-05-24-property.md
@@ -40,7 +40,7 @@ public class Person {
 class Person(val name: String, var isMarried: Boolean)
 ```
 
-이 한줄의 코틀린 코드는 21줄의 자바 코드와 완전히 동일한 코드다. 코틀린의 기본 가시성이 public이기 때문에 getter와 setter의 가시성을 그대로 놔둬도 된다. 그런데 기본 가시성이 public이라면, 필드에 저장된 데이터의 가시성도 public이라고 생각할 수 있지만, **생성자에 선언된 데이터는 private이 된다.** 반면 **일반 클래스 필드에 넣은 데이터는 private으로 지정해 주지 않을 경우 public이다.**
+이 한줄의 코틀린 코드는 21줄의 자바 코드와 완전히 동일한 코드다.
 
 자세히보면 자바코드에서 setter를 제공하지 않는 `name`은 `val`로 선언하였고, getter와 setter모두 제공하는(조회화 변경을 모두 허용하는) `isMarried`는 var로 선언했다. 익히 알고있듯이 val은 불변, var은 가변 데이터를 선언할 때 사용한다. 이와 같은 맥락으로 val로 선언한 `name`은 setter가 생성되지 않는다. 이 부분을 코드로 보자면 아래와 같다.
 
@@ -61,7 +61,7 @@ class Person {
 }
 ```
 
-`val`로 선언한 name의 경우 setter가 없다. setter를 만들고 싶어도 val은 불변이기에 만들 수 없다(억지로 만드려고 하면 컴파일에러가 뜬다). 참고로 위에서 `get()`과 `set()`을 정해준 것은 커스텀 접근자이다. 기본적으로는 코틀린 클래스를 만들 때 생성자에 넣어준 데이터들에 대하여 get()과 set()이 숨겨져 있으나, 위의 코드처럼 명시적으로 적어줄 수 있다. 그말은 getter와 setter를 커스텀 할 수도 있다는 뜻이다. 추가적으로 위 코드는 클래스의 생성자가 아닌 필드에서 데이터를 선언했으므로 데이터 가시성은 public이다.
+`val`로 선언한 name의 경우 setter가 없다. setter를 만들고 싶어도 val은 불변이기에 만들 수 없다(억지로 만드려고 하면 컴파일에러가 뜬다). 참고로 위에서 `get()`과 `set()`을 정해준 것은 커스텀 접근자이다. 기본적으로는 코틀린 클래스를 만들 때 생성자에 넣어준 데이터들에 대하여 get()과 set()이 숨겨져 있으나, 위의 코드처럼 명시적으로 적어줄 수 있다. 그말은 getter와 setter를 커스텀 할 수도 있다는 뜻이다.
 
 ### 생성자에 val, var의 유무 차이
 
@@ -153,13 +153,13 @@ public class Person {
 }
 ```
 
-필드인 `name`자체만 보면 private 키워드가 붙어있으므로 private이 맞지만, 프로퍼티 전체를 보면 다르다. 필드는 private이지만 getter와 setter로 접근이 모두 가능하기 때문에 프로퍼티는 private하다고 볼 수 없다. 위의 코드에서 **`name` 프로퍼티**가 private이기 위해서는 아래와 같은 코틀린 코드가 필요하다.
+자바 필드인 `name`자체만 보면 private 키워드가 붙어있으므로 private이 맞지만, 프로퍼티 전체를 보면 다르다. 필드는 private이지만 getter와 setter로 접근이 모두 가능하기 때문에 프로퍼티는 private하다고 볼 수 없다. 위의 코드에서 **`name` 프로퍼티**가 private이기 위해서는 아래와 같은 코틀린 코드가 필요하다.
 
 ```kotlin
 class Person(private var name: String)
 ```
 
-생성자 앞에 `private`이 붙었다. `private`이 붙지 않은 상태였어도 디컴파일한 자바 코드의 필드에는 `private`이 붙지만, 코틀린은 기본적으로 필드가 아닌 프로퍼티를 다루기 때문에 프로퍼티 전체가 `private`이 된다. 디컴파일된 자바 코드는 아래와 같다.
+name 앞에 `private`이 붙었다. `private`이 붙지 않은 상태였어도 디컴파일한 자바 코드의 필드에는 `private`이 붙지만, 코틀린은 기본적으로 필드가 아닌 프로퍼티를 다루기 때문에 프로퍼티 전체가 `private`이 된다. 디컴파일된 자바 코드는 아래와 같다.
 
 ```java
 public final class Property {
