--- a/_posts/kotlin/2019-08-25-코틀린 코루틴 개념 익히기.md
+++ b/_posts/kotlin/2019-08-25-코틀린 코루틴 개념 익히기.md
@@ -83,14 +83,14 @@ Sub Routine은 루틴에 진입하는 지점과 루틴을 빠져나오는 지점
 
 함수를 중간에 빠져나왔다가, 다른 함수에 진입하고, 다시 원점으로 돌아와 멈추었던 부분부터 다시 시작하는 이 특성은 동시성 프로그래밍을 가능하게 한다.
 
-동시성 프로그래밍의 개념을 잡고가자면, 병행성 프로그래밍과 완전히 다른 개념이다. 예를 들어 양쪽에 놓여진 두 개의 도화지에 사람 그림을 각자 그린다고 가정해보자.
+동시성 프로그래밍의 개념을 잡고가자면, 병렬성 프로그래밍과 완전히 다른 개념이다. 예를 들어 양쪽에 놓여진 두 개의 도화지에 사람 그림을 각자 그린다고 가정해보자.
 ![image](https://user-images.githubusercontent.com/18481078/63692638-1dd44b80-c84d-11e9-952f-c78a58bec3e0.png)
 
 동시성 프로그래밍이란 오른쪽 손에만 펜을 쥐고서 왼쪽 도화지에 사람 일부를 조금 그리고, 오른쪽 도화지에 가서 잠시 또 사람을 그리고, 다시 왼쪽 도화지에 사람을 찔끔 그리고... 이 행위를 아주 빨리 반복하는 것이다. 사실 내가 쥔 펜은 한 순간에 한 가지 도화지에만 닿는다. 그러나 이 행위를 멀리서 본다면 마치 동시에 그림이 그려지고 있는 것 처럼 보일 것이다. 이것이 동시성 프로그래밍이다.
 
-병행성 프로그래밍은 이 것과 다르다. 병행성은 실제로 양쪽손에 펜을 하나씩 들고서 왼쪽과 오른쪽에 실제로 그림을 동시에 그리는 것이다. 같은 시간동안 병행해서 그림을 그리는 것이다.
+병렬성 프로그래밍은 이 것과 다르다. 병렬성은 실제로 양쪽손에 펜을 하나씩 들고서 왼쪽과 오른쪽에 실제로 그림을 동시에 그리는 것이다. 같은 시간동안 병행해서 그림을 그리는 것이다.
 
-코루틴은 개념자체로만 보면 병행성이아니라 동시성을 지원하는 개념이다. 위의 설명을 코드로 다시 살펴보자.
+코루틴은 개념자체로만 보면 병렬성이아니라 동시성을 지원하는 개념이다. 위의 설명을 코드로 다시 살펴보자.
 ![image](https://user-images.githubusercontent.com/18481078/63692912-b9fe5280-c84d-11e9-9c8c-88b2bf5ade73.png)
 
 코루틴도 루틴이다. 즉 쓰레드가 아니라 일반 서브루틴과 비슷한 루틴이기 때문에 하나의 쓰레드에 여러개가 존재할 수 있다.
