코틀린 코루틴(coroutine) 개념 익히기 수정

--- a/_posts/kotlin/2019-08-25-코틀린 코루틴 개념 익히기.md
+++ b/_posts/kotlin/2019-08-25-코틀린 코루틴 개념 익히기.md
@@ -86,20 +86,20 @@ Sub Routine은 루틴에 진입하는 지점과 루틴을 빠져나오는 지점
 동시성 프로그래밍의 개념을 잡고가자면, 병렬성 프로그래밍과 완전히 다른 개념이다. 예를 들어 양쪽에 놓여진 두 개의 도화지에 사람 그림을 각자 그린다고 가정해보자.
 ![image](https://user-images.githubusercontent.com/18481078/63692638-1dd44b80-c84d-11e9-952f-c78a58bec3e0.png)
 
-동시성 프로그래밍이란 오른쪽 손에만 펜을 쥐고서 왼쪽 도화지에 사람 일부를 조금 그리고, 오른쪽 도화지에 가서 잠시 또 사람을 그리고, 다시 왼쪽 도화지에 사람을 찔끔 그리고... 이 행위를 아주 빨리 반복하는 것이다. 사실 내가 쥔 펜은 한 순간에 한 가지 도화지에만 닿는다. 그러나 이 행위를 멀리서 본다면 마치 동시에 그림이 그려지고 있는 것 처럼 보일 것이다. 이것이 동시성 프로그래밍이다.
+동시성 프로그래밍이란 오른쪽 손에만 펜을 쥐고서 왼쪽 도화지에 사람 일부를 조금 그리고, 오른쪽 도화지에 가서 잠시 또 사람을 그리고, 다시 왼쪽 도화지에 사람을 찔끔 그리고... 이 행위를 아주 빨리 반복하는 것이다. 사실 내가 쥔 펜은 한 순간에 하나의 도화지에만 닿는다. 그러나 이 행위를 멀리서 본다면 마치 동시에 그림이 그려지고 있는 것 처럼 보일 것이다. 이것이 동시성 프로그래밍이다.
 
-병렬성 프로그래밍은 이 것과 다르다. 병렬성은 실제로 양쪽손에 펜을 하나씩 들고서 왼쪽과 오른쪽에 실제로 그림을 동시에 그리는 것이다. 같은 시간동안 병행해서 그림을 그리는 것이다.
+병렬성 프로그래밍은 이 것과 다르다. 병렬성은 실제로 양쪽 손에 펜을 하나씩 들고서 왼쪽과 오른쪽에 실제로 동시에 그리는 것이다. 같은 시간동안 두 개의 그림을 그리는 것이다.
 
 코루틴은 개념자체로만 보면 병렬성이아니라 동시성을 지원하는 개념이다. 위의 설명을 코드로 다시 살펴보자.
 ![image](https://user-images.githubusercontent.com/18481078/63692912-b9fe5280-c84d-11e9-9c8c-88b2bf5ade73.png)
 
 코루틴도 루틴이다. 즉 쓰레드가 아니라 일반 서브루틴과 비슷한 루틴이기 때문에 하나의 쓰레드에 여러개가 존재할 수 있다.
 
-위의 코드에서는 메인 쓰레드에 코루틴이 두 개가 있다. 하나는 왼쪽 도화지에 그림을 그리는 코드고 다른 하나는 오른쪽 도화지에 그림을 그리는 코드다. 메인 쓰레드가 실행되면서 먼저 왼쪽 코루틴인 `drawPersonToPaperA()`라는 함수를 만났다고 가정해보자. 해당 함수는 가상 코루틴 빌더인 startCoroutine {} 블럭으로 인해 코루틴이 되고, 함수를 중간에 나갔다가 다시 들어올 수 있는 힘을 얻게된다. `drawPersonToPaperA()`가 호출되어 suspend함수인 `drawHead()`를 만나게 되면 이 코루틴을 잠시 빠져나간다.
+위의 코드에서는 메인 쓰레드에 코루틴이 두 개가 있다. 하나는 왼쪽 도화지에 그림을 그리는 코드고 다른 하나는 오른쪽 도화지에 그림을 그리는 코드다. 메인 쓰레드가 실행되면서 먼저 왼쪽 코루틴인 `drawPersonToPaperA()`라는 함수를 만났다고 가정해보자. 해당 함수는 가상 코루틴 빌더인 `startCoroutine {}` 블럭으로 인해 코루틴이 되고, 함수를 중간에 나갔다가 다시 들어올 수 있는 힘을 얻게된다. `drawPersonToPaperA()`가 호출되어 `suspend`함수인 `drawHead()`를 만나게 되면 이 코루틴을 잠시 빠져나간다.
 
-왼쪽 코루틴을 빠져나갔지만 그렇다고 메인쓰레드가 가만히 놀고있진 않는다. 다른 `suspend` 함수들을 찾거나 resume되어지는 다른 코드들을 찾는다. 왼쪽 코루틴의 경우 2초 동안 `drawHead()`작업을 하게된다. 그러나 delay(2000)는 쓰레드를 블락시키지 않으므로 다른 일들을 할 수가 있다. 뿐만 아니라 `drawHead()`함수 안에서 다른 쓰레드를 실행시킨다면 병행적으로도 실행이 가능하다. 왼쪽 코루틴을 빠져나온 쓰레드가 오른쪽 코루틴을 만나게 되어 또 한번 `suspend` 함수를 만나게 되면 아까 도화지 그림에서 설명한 것과 같은 현상이 일어난다. 아까 오른손에 펜을 쥐고 왼쪽과 오른쪽 도화지를 아주빠르게 왔다 갔다 하면서 그림을 그리는 것 같은 셈이다. **이렇게 코루틴을 사용하여 쓰레드 하나에서 동시성 프로그래밍이 가능하다**
+왼쪽 코루틴을 빠져나갔지만 그렇다고 메인쓰레드가 가만히 놀고있진 않는다. 다른 `suspend` 함수들을 찾거나 resume되어지는 다른 코드들을 찾는다. 왼쪽 코루틴의 경우 2초 동안 `drawHead()`작업을 하게된다. 그러나 `delay(2000)`는 쓰레드를 블락시키지 않으므로 다른 일들을 할 수가 있다. 뿐만 아니라 `drawHead()`함수 안에서 다른 쓰레드를 실행시킨다면 병행적으로도 실행이 가능하다. 왼쪽 코루틴을 빠져나온 쓰레드가 오른쪽 코루틴을 만나게 되어 또 한번 `suspend` 함수를 만나게 되면 아까 도화지 그림에서 설명한 것과 같은 현상이 일어난다. 아까 오른손에 펜을 쥐고 왼쪽과 오른쪽 도화지를 아주빠르게 왔다 갔다 하면서 그림을 그리는 것 같은 셈이다. **이렇게 코루틴을 사용하여 쓰레드 하나에서 동시성 프로그래밍이 가능하다**
 
-코루틴을 생성해서 동시성 프로그래밍을 하는 것은, 쓰레드를 사용해서 동시성 프로그래밍을 하는것과 차원이 다른 효율성을 제공한다. 위에서 말한 동작을 쓰레드 두 개를 만들어 실행한다고 가정해보자.
+코루틴을 생성해서 동시성 프로그래밍을 하는 것은, 쓰레드를 사용해서 동시성 프로그래밍을 하는 것과 차원이 다른 효율성을 제공한다. 위에서 말한 동작을 쓰레드 두 개를 만들어 실행한다고 가정해보자.
 ![image](https://user-images.githubusercontent.com/18481078/63693725-c7b4d780-c84f-11e9-9158-0d6b65c614fe.png)
 
 왼쪽 쓰레드는 왼쪽 도화지에, 오른쪽 쓰레드는 오른쪽 도화지에 그림을 그리는 쓰레드이다. 그러나 CPU는 단 한 개뿐이다. 따라서 왼쪽에 조금, 오른쪽에 조금을 반복하기 위해선 CPU가 매번 쓰레드를 점유했다가 놓아주고, 새로운 쓰레드를 점유했다가 놓아주고를 반복해야 한다. 이를 [컨텍스트 스위칭](https://ko.wikipedia.org/wiki/%EB%AC%B8%EB%A7%A5_%EA%B5%90%ED%99%98)이라고 한다. 하나의 쓰레드에서 단순히 함수를 왔다 갔다 하는것과는 다르게 꽤 비용이 드는 작업이다.
@@ -137,7 +137,7 @@ Sub Routine은 루틴에 진입하는 지점과 루틴을 빠져나오는 지점
 
 콜백 코드보다 훨씬 눈에 잘 들어오는 것 같다. 왜 잘들어 올까? `wakeUp()`, `takeShower()`, `putOnShirt()` 등등의 함수들이 보통 사람이 생각하는 것 처럼 순차적으로 보이기 때문이 아닐까? 즉 각 과정의 함수들이 동일한 depth를 유지하며 동기적인 코드처럼 보이기 때문에 훨씬 보기가 편해졌다.
 
-그런데 Rx를 모르는 사람이 이 코드를 본다면 어떨까? Observable이 무엇인지, just가 무엇인지, flatMap은 무엇인지... 코드를 보면 어지러울수도 있다. 뿐만 아니라 사실 Rx가 제공하는 마법같은 operation들이 상당히 많기 때문에 학습곡선이 꽤 높기로 유명하다.
+그런데 Rx를 모르는 사람이 이 코드를 본다면 어떨까? `Observable`이 무엇인지, `just`가 무엇인지, `flatMap`은 무엇인지... 코드를 보면 어지러울수도 있다. 뿐만 아니라 사실 Rx가 제공하는 마법같은 operation들이 상당히 많기 때문에 학습 곡선이 꽤 높기로 유명하다.
 
 하지만 Rx를 아는사람들 끼리는 너무나도 좋은 도구인것은 확실하며 높은 학습 곡선 만큼 효율성도 크다. 아무튼 Rx로 짜면 이런 식이다.
 
@@ -152,7 +152,7 @@ Sub Routine은 루틴에 진입하는 지점과 루틴을 빠져나오는 지점
 
 ### 결론
 
-비동기 처리에 있어서 Rx는 매우 훌륭한 도구이고 나 역시 코루틴을 공부하기 전까지는 더 할나위 없는 기술이라 생각하며 사용해 왔다. 그러나 이제는 생각이 바뀌었다. Rx를 사용하는 가장 주된 이유 중 하나가 비동기 처리인데, 결국은 Rx도 비동기 처리를 쉽게 하기 위한 하나의 발악이라고 볼 수 있기 때문이다. 결국 발악은 발악이고 궁극적으로 비동기 처리를 위하여 여러가지 헬퍼 코드들이 덕지 덕지 붙게 된다. 반면 코루틴은 비동기 처리를 하기 위해 그런 발악, 또는 시도를 거부하는 것 처럼 느껴진다. 마치 "왜 비동기 처리 때문에 고생하니? 그냥 동기처럼 짜면 그만인데"라고 이야기하는 것 같다.
+비동기 처리에 있어서 Rx는 매우 훌륭한 도구이고 나 역시 코루틴을 공부하기 전까지는 더 할나위 없는 기술이라 생각하며 사용해 왔다. 그러나 점점 생각이 바뀌었다. Rx를 사용하는 가장 주된 이유 중 하나가 비동기 처리인데, 결국은 Rx도 비동기 처리를 쉽게 하기 위한 하나의 발악이라고 볼 수 있기 때문이다(물론 데이터를 흐름으로 바라보며 처리한다는 점은 훌륭하다). 결국 발악은 발악이고 궁극적으로 비동기 처리를 위하여 여러가지 헬퍼 코드들이 덕지 덕지 붙게 된다. 반면 코루틴은 비동기 처리를 하기 위해 그런 발악, 또는 시도를 거부하는 것 처럼 느껴진다. 마치 "왜 비동기 처리 때문에 고생하니? 그냥 동기처럼 짜면 그만인데"라고 이야기하는 것 같다.
 
 코루틴을 공부하고도 Rx를 더 선호하는 사람이 있을 수 있고, 코루틴에 푹 빠지게 되는 사람도 있을 것이다. 무엇이 더 좋고 더 나쁜가에 대한 정답은 없지만, 개인 적인 생각으로는 비동기 처리의 궁극적인 모습은 마치 비동기 코드가 아닌것 처럼 짜는 모습이 아닐까 생각한다.
 
