오탈자 수정

--- a/_posts/중얼중얼/2021-05-07-첫퇴사와이직을앞두고.md
+++ b/_posts/중얼중얼/2021-05-07-첫퇴사와이직을앞두고.md
@@ -32,15 +32,15 @@ comments: true
 
 ### 2. 문화라고 착각했던 것, 그래도 값진 것
 
-입사를 하고 나서 몇 주 되지 않았을 때 일입니다. 팀원이 15명 정도 있었는데, 한 분이 기술 세미나를 하기 위해 저희 팀 모두를 회의실로 초대했고, 곧바로 Spring 라이브 코딩 30분 정도 했었습니다. 누구 앞에서 발표하는 것이 두렵고, 특히나 내 코드를 누군가에게 보여준다는 것이 덜컥 겁이 나는 신입 시절에 보았던 그 라이브 코딩 세미나는 충격적이였습니다. 심지어 몇 달에 한 번, 짧을 때는 몇 주에 한 번씩 매번 본인의 지식을 공유하셨습니다. 특별히 발표 자료를 준비해온 게 아니라, 가볍게 intelliJ 켜놓고 본인의 생각과 함께 코드로 표현하는 공유였습니다. spring을 몰랐기에 내용은 잘 몰랐지만 엄청난 자극이 되었고, 나도 저 대화에 끼고 싶다는 생각, 언젠간 나도 라이브 코딩 하면서 지식을 공유하고 싶다는 생각이 끊이질 않았습니다. ~~그래서 이제 막 코틀린을 조금 공부하고 나서 부랴부랴 어설픈 라이브 코딩 세미나를 했던 기억이 나네요😅.~~ 아마 다른 분들도 저와 비슷한 자극을 받지 않았을까요?
+입사를 하고 나서 몇 주 되지 않았을 때 일입니다. 팀원이 15명 정도 있었는데, 한 분이 기술 세미나를 하기 위해 저희 팀 모두를 회의실로 초대했고, 곧바로 Spring 라이브 코딩 30분 정도 했었습니다. 누구 앞에서 발표하는 것이 두렵고, 특히나 내 코드를 누군가에게 보여준다는 것이 덜컥 겁이 나는 신입 시절에 보았던 그 라이브 코딩 세미나는 충격적이였습니다. 심지어 몇 달에 한 번, 짧을 때는 몇 주에 한 번씩 매번 본인의 지식을 공유하셨습니다. 특별히 발표 자료를 준비해온 게 아니라, 가볍게 intelliJ를 하나 켜놓고 본인의 생각을 코드로 표현하는 공유였습니다. spring을 몰랐기에 내용은 잘 몰랐지만 엄청난 자극이 되었고, 저도 저 대화에 끼고 싶다는 생각, 언젠간 저도 라이브 코딩 하면서 지식을 공유하고 싶다는 생각이 끊이질 않았습니다. ~~그래서 이제 막 코틀린을 조금 공부하고 나서 부랴부랴 어설픈 라이브 코딩 세미나를 했던 기억이 나네요😅.~~ 아마 다른 분들도 저와 비슷한 자극을 받지 않았을까요?
 
-아무튼 제가 일반적으로 봐왔던 형식적인 세미나(ppt를 만들어서 슬라이드를 넘기며 하는)가 아니라, 다소 부담 없이 본인의 생각을 코드로 짜며 공유하는 것을 보면서 굉장히 좋은 문화구나라고 생각했었습니다. 그러나 시간이 많이 지나고 나서 깨달은건, 그건 그분의 빛나는 노력이었지 문화가 아니었습니다. 문화는 한두 사람이 주도해서 형성되는게 아니라, 거의 대부분의 미국 사람들이 집에서 신발을 신는 것과 같이 모두에게 자연스럽게 스며든 것이어야 합니다. 한두 사람이 포기해버리면 더 이상 이어지지 않는 건 문화라고 보기 어렵습니다.
+아무튼 제가 일반적으로 봐왔던 형식적인 세미나(ppt를 만들어서 슬라이드를 넘기며 하는)가 아니라, 다소 부담 없이 본인의 생각을 코드로 보여주며 공유하는 것을 보면서 굉장히 좋은 문화구나라고 생각했었습니다. 그러나 시간이 많이 지나고 나서 깨달은건, 그건 그분의 빛나는 노력이었지 문화가 아니었습니다. 문화는 한두 사람이 주도해서 형성되는게 아니라, 거의 대부분의 미국 사람들이 집에서 신발을 신는 것과 같이 모두에게 자연스럽게 스며든 것이어야 합니다. 한두 사람이 포기해버리면 더 이상 이어지지 않는 건 문화라고 보기 어렵습니다.
 
 ![image](https://user-images.githubusercontent.com/18481078/117393616-7b300380-af2f-11eb-8096-83fdf3afbed4.png)
 
 세미나 까진 아니더라도, 저도 좋은 개발 문화가 되길 바라면서 시도한 것이 있습니다. 부문 내 모든 개발자들끼리 각자 공부하다가 발견한 좋은 자료를 서로 공유하고, 가능하다면 자극도 받을 수 있는 문화를 만들고자 개발 링크 공유방을 사내 메신저에 만들었는데요, 활발한 문화로 만드는 건 참 어렵더군요🧐. 비록 제가 링크를 올리지 않으면 많이 조용해지는 방이긴 했지만, 앞으로는 모두가 활발히 공유하는 메시지방이 되었으면 하는 바람이 있습니다 ㅎㅎ.
 
-함께 성장하기 위한 좋은 개발 문화를 만드는 건, 실패하더라도 큰 값어치가 있다고 생각합니다. 소수의 인원이라도 저처럼 그 노력에 자극을 받는 사람이 생기고, 그 사람들이 또 좋은 문화를 위해 노력하다 보면, 본인의 성장은 물론이고 조금씩 조금씩 조직에 맞는 개발 문화가 생겨나지 않을까 생각합니다.
+**함께 성장하기 위한 좋은 개발 문화를 만드는 건, 실패하더라도 큰 값어치가 있다고 생각합니다.** 소수의 인원이라도 저처럼 그 노력에 자극을 받는 사람이 생기고, 그 사람들이 또 좋은 문화를 위해 노력하다 보면, 본인의 성장은 물론이고 조금씩 조금씩 조직에 맞는 개발 문화가 생겨나지 않을까 생각합니다.
 
 ### 3. 비개발자가 바라보는 개발자 or 개발 조직
 
