오탈자 수정

--- a/_posts/kotlin/2019-02-24-kotiln_동등성연산.md
+++ b/_posts/kotlin/2019-02-24-kotiln_동등성연산.md
@@ -10,7 +10,7 @@ comments: true
 
 ## 자바와 다르다
 
-자바에서는 원시 타입을 비교하기 위해 `==`를 사용한다. 이 경우 `==`는 두 피연산자의 값이 같은지 비교하는데, 이를 동등성이라고 한다. 값이 동등하다는 것이다.
+자바에서는 **원시 타입**을 비교하기 위해 `==`를 사용한다. 이 경우 `==`는 두 피연산자의 값이 같은지 비교하는데, 이를 동등성이라고 한다. 값이 동등하다는 것이다.
 
 ```java
 int a = 1
@@ -19,7 +19,7 @@ int b = 2
 System.out.println(a == b) // false
 ```
 
-한편 참조 타입인 두 피연산자 사이에 `==`를 사용할 경우 주소값으로 비교를 하게 된다. 두 피연산자의 주소값이 같은 곳을 가리키고 있다면 `true`를 반환하는 것이다. `String`의 경우 원시 타입이 아닌 참조 타입이기 때문에, 겉으로 보이는 문자가 똑같아 보여도 주소값이 다를경우 `false`가 출력된다.
+한편 **참조 타입**인 두 피연산자 사이에 `==`를 사용할 경우 **주소값**으로 비교를 하게 된다. 두 피연산자의 주소값이 같은 곳을 가리키고 있다면 `true`를 반환하는 것이다. `String`의 경우 원시 타입이 아닌 참조 타입이기 때문에, 겉으로 보이는 문자가 똑같아 보여도 주소값이 다를경우 `false`가 출력된다.
 
 ```java
 String a = "hi" // 주소값 : 1번지
