--- a/_posts/Compose/2021-05-18-컴포즈가필요한이유.md
+++ b/_posts/Compose/2021-05-18-컴포즈가필요한이유.md
@@ -24,7 +24,7 @@ comments: true
 
 ![image](https://user-images.githubusercontent.com/18481078/118643004-f8545600-b816-11eb-8cdb-1a99e455eea8.png)
 
-몇 년 동안 코드와 UI를 연결하는 많은 방법들이 나왔습니다. 그림에서 보이듯이 계속해서 꾸준히 발전 해왔고, 지금 현재 MVVM과 databinding 조합으로 꾀나 잘 사용하고 있게 되었는데, 왜 컴포즈가 나왔을까요?
+몇 년 동안 코드와 UI를 연결하는 많은 방법들이 나왔습니다. 그림에서 보이듯이 계속해서 꾸준히 발전 해왔고, 지금 현재 MVVM과 databinding 조합으로 꾀나 잘 사용하고 있는데, 왜 컴포즈가 나왔을까요?
 이들의 한계는 결국 여전히 xml을 사용한다는 점에 있습니다.
 
 ![image](https://user-images.githubusercontent.com/18481078/118622369-372be100-b802-11eb-9647-9fc472892ee3.png)
