오탈자 수정

--- a/_posts/Compose/2021-05-18-컴포즈가필요한이유.md
+++ b/_posts/Compose/2021-05-18-컴포즈가필요한이유.md
@@ -41,7 +41,7 @@ Jetpack Compose를 사용하면 Fragment는 자연스럽게 없어집니다. 아
 
 위 그림은, 선언형 UI toolkit인 Jetpack Compose(only kotlin)로 구현할 경우 나타나는 패턴입니다. 즉, 데이터를 입력받으면 UI를 그려주는 Kotlin 함수(composable 함수)를 사용하여 UI를 그리게 되는 상황인데요, ViewModel에서 변경된 데이터를 Composable 함수의 파라미터로 바로 넘겨주기만 하면 되기 때문에, **서로 다른 분야를 이어주며 강한 결합도를 가지는 Extra Layer가 사라지게 됩니다.** UI가 바뀌면, Composable 함수만 수정하면 될 뿐입니다.
 
-### Good bye fragment
+### Goodbye Fragment
 
 Fragment의 기원은 Android 3.0에서 시작합니다. 태블릿 PC처럼 Activity 한 개에 보일 화면(View)들이 많을 경우 Activity Class 하나에 코드가 넘쳐나는 것을 방지하고자 세상에 나왔습니다.
 ![fragment](https://user-images.githubusercontent.com/18481078/118646900-baa5fc00-b81b-11eb-9a7e-2a21d21564d2.png)
