포스트 수정

--- a/_posts/중얼중얼/2021-05-07-첫퇴사와이직을앞두고.md
+++ b/_posts/중얼중얼/2021-05-07-첫퇴사와이직을앞두고.md
@@ -56,4 +56,4 @@ comments: true
 
 ## 앞으로의 날들
 
-한 회사에 오래 있다고 하더라도, 1년 차 때 느낄 수 있는 것, 3년 차, 5년 차, 10년 차 이상일 때 느낄수 있고 배울 수 있는 것들이 다 다를 거라고 생각합니다. 짧은 2년 3개월이었지만, 1년 차, 2년 차, 3년 차가 되면서 느꼈던 점들이 많이 달랐고, 저는 그대로지만 주변 환경과 사람들이 바뀌면서 새롭게 느꼈던 점들도 많았습니다. 앞으로의 날은 이전 회사보다 더 오래 있으면서, 4년 차, 5년 차 때 느낄 수 있는 것들도 경험해보고 싶습니다(고인물은 되지 않도록 주의해야겠죠). 물론 더 이상 제가 성장하기 힘든 환경이 되거나, 회사의 방향이 제가 생각 하는 방향과 많이 다르게 변한다면 또 한 번의 이직을 생각하겠지만, 그전까진 최대한 많은 경험을 쌓으며 즐겁게 일하고 싶습니다.
+한 회사에 오래 있다고 하더라도, 1년 차 때 느낄 수 있는 것, 3년 차, 5년 차, 10년 차 이상일 때 느낄수 있고 배울 수 있는 것들이 다 다를 거라고 생각합니다. 짧은 2년 3개월이었지만, 1년 차, 2년 차, 3년 차가 되면서 느꼈던 점들이 많이 달랐고, 저는 그대로지만 주변 환경과 사람들이 바뀌면서 새롭게 느꼈던 점들도 많았습니다. 앞으로의 날은 이전 회사보다 더 오래 있으면서, 4년 차, 5년 차 때 느낄 수 있는 것들도 경험해보고 싶습니다. 물론 더 이상 제가 성장하기 힘든 환경이 되거나, 회사의 방향이 제가 생각 하는 방향과 많이 다르게 변한다면 또 한 번의 이직을 생각하겠지만, 그전까진 최대한 많은 경험을 쌓으며 즐겁게 일하고 싶습니다.
