--- a/_posts/kotlin/2022-01-11-람다내부에서의return.md
+++ b/_posts/kotlin/2022-01-11-람다내부에서의return.md
@@ -13,41 +13,18 @@ comments: true
 예를 들어 흔히 사용하는 `forEach`의 경우 **inline 고차함수**라서 람다 내부에서 `return`이 가능하다.
 
 ```kotlin
-fun main() {
-	findAndPrintTen(listOf(1,2,3,10))
-	
-	fun findAndPrintTen(numbers: List<Int>) {
-	    numbers.forEach {
-	        if (it == 10) {
-	            println("find 10!!")
-	            return
-	        }
-	    }
-	}
+
+fun findAndPrintTen(numbers: List<Int>) {
+    numbers.forEach {
+        if (it == 10) {
+            println("find 10!!")
+            return
+        }
+    }
 }
 
-// find 10!!
-```
-
-```kotlin
-@kotlin.internal.HidesMembers
-public inline fun <T> Iterable<T>.forEach(action: (T) -> Unit): Unit {
-    for (element in this) action(element)
-}
-```
-
-```kotlin
 fun main() {
-	findAndPrintTen(listOf(1,2,3,10))
-	
-	fun findAndPrintTen(numbers: List<Int>) {
-	    numbers.forEach {
-	        if (it == 10) {
-	            println("find 10!!")
-	            return
-	        }
-	    }
-	}
+    findAndPrintTen(listOf(1,2,3,10))
 }
 
 // find 10!!
@@ -69,7 +46,7 @@ inline fun <Int> Collection<Int>.forEachA(block: (Int) -> Unit) {
     for (e in this) block(e)
 }
 
-fun <Int: Number> Collection<Int>.forEachB(block: (Int) -> Unit) {
+fun <Int> Collection<Int>.forEachB(block: (Int) -> Unit) {
     for (e in this) block(e)
 }
 ```
